samples/_failures_safe/1761619053_f997b8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c8375df8.c:186: error: expected ‘;’, ‘,’ or ‘)’ at end of input
